# nih-research-mcp

./: README.md  pyproject.toml  server.py
data/: imaging_metadata.json  patients.csv  publications.json
data/protocols/: aaa_screening.md  dicom_deidentification.md
examples/: example_queries.md
