[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nih-research-mcp"
version = "0.1.0"
description = "Synthetic NIH-style clinical research MCP server demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0"
]

[project.scripts]
nih-research-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
